Refactor (compiler)!: adds jua.util.List